--- a/public/page/temp_broker_login.ejs
+++ b/public/page/temp_broker_login.ejs
@@ -31,6 +31,7 @@
         </div>
 
         <script>
+            document.addEventListener('DOMContentLoaded', login);
             var x = document.getElementById("logForm");
             var y = document.getElementById("regForm");
             var z = document.getElementById("btn")
